@@ -1,14 +1,12 @@
 package com.dyslexia.dyslexia.controller;
 
 import com.dyslexia.dyslexia.dto.DocumentDto;
-import com.dyslexia.dyslexia.dto.StudentDocumentListResponseDto;
+import com.dyslexia.dyslexia.dto.UploadedDocumentsResponseDto;
 import com.dyslexia.dyslexia.entity.Document;
-import com.dyslexia.dyslexia.entity.Student;
-import com.dyslexia.dyslexia.entity.Guardian;
+import com.dyslexia.dyslexia.exception.GlobalApiResponse;
+import com.dyslexia.dyslexia.mapper.DocumentMapper;
 import com.dyslexia.dyslexia.repository.DocumentRepository;
-import com.dyslexia.dyslexia.repository.StudentRepository;
 import com.dyslexia.dyslexia.repository.GuardianRepository;
-import com.dyslexia.dyslexia.repository.StudentTextbookAssignmentRepository;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.Parameter;
 import io.swagger.v3.oas.annotations.media.Content;
@@ -17,7 +15,6 @@ import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.ResponseEntity;
@@ -28,67 +25,42 @@ import org.springframework.web.bind.annotation.RestController;
 
 @Tag(name = "GuardianDocument", description = "보호자 문서 관리 API")
 @RestController
-@RequestMapping("guardian/documents")
+@RequestMapping("guardians/{guardianId}")
 @RequiredArgsConstructor
 @Slf4j
 public class GuardianDocumentController {
 
-    private final DocumentRepository documentRepository;
+  private final DocumentRepository documentRepository;
+  private final GuardianRepository guardianRepository;
+  DocumentMapper documentMapper;
 
   @Operation(summary = "보호자가 업로드한 문서 목록 조회", description = "보호자가 업로드한 모든 문서 목록을 조회합니다.")
   @ApiResponses({
       @ApiResponse(responseCode = "200", description = "조회 성공",
-          content = @Content(schema = @Schema(implementation = StudentDocumentListResponseDto.class))),
+          content = @Content(schema = @Schema(implementation = UploadedDocumentsResponseDto.class))),
       @ApiResponse(responseCode = "404", description = "보호자를 찾을 수 없음"),
       @ApiResponse(responseCode = "500", description = "서버 오류")
   })
-  @GetMapping("/{guardianId}")
-  public ResponseEntity<StudentDocumentListResponseDto> getGuardianDocuments(
+  @GetMapping("documents")
+  public ResponseEntity<GlobalApiResponse<List<DocumentDto>>> getGuardianDocuments(
       @Parameter(description = "보호자 ID", required = true)
       @PathVariable("guardianId") Long guardianId) {
 
-    log.info("보호자 ID: {}의 문서 목록 조회 요청", guardianId);
+    log.info("보호자({})의 문서 목록 조회 요청", guardianId);
 
-    try {
-      List<Document> documents = documentRepository.findAllByOrderByUploadedAtDesc();
+    // 존재 여부 체크
+    guardianRepository.findById(guardianId)
+        .orElseThrow(() -> new IllegalArgumentException("보호자를 찾을 수 없습니다."));
 
-      if (documents.isEmpty()) {
-        return ResponseEntity.ok(
-            StudentDocumentListResponseDto.builder()
-                .success(true)
-                .message("업로드한 문서가 없습니다.")
-                .documents(List.of())
-                .build()
-        );
-      }
+    List<Document> documents = documentRepository.findByGuardianIdOrderByUploadedAtDesc(guardianId);
 
-      List<DocumentDto> documentDtos = documents.stream()
-          .map(document -> DocumentDto.builder()
-              .id(document.getId())
-              .guardianId(document.getGuardian().getId())
-              .title(document.getTitle())
-              .originalFilename(document.getOriginalFilename())
-              .fileSize(document.getFileSize())
-              .uploadedAt(document.getUploadedAt())
-              .build())
-          .collect(Collectors.toList());
+    List<DocumentDto> dtos = documents.stream()
+        .map(documentMapper::toDto)
+        .toList();
 
-      return ResponseEntity.ok(
-          StudentDocumentListResponseDto.builder()
-              .success(true)
-              .message("문서 목록 조회 성공")
-              .documents(documentDtos)
-              .build()
-      );
-
-    } catch (Exception e) {
-      log.error("보호자 문서 목록 조회 중 오류 발생", e);
-      return ResponseEntity.status(500).body(
-          StudentDocumentListResponseDto.builder()
-              .success(false)
-              .message("문서 목록 조회 중 오류가 발생했습니다: " + e.getMessage())
-              .build()
-      );
-    }
+    return ResponseEntity.ok(GlobalApiResponse.ok(
+        documents.isEmpty() ? "업로드한 문서가 없습니다." : "문서 목록 조회 성공",
+        dtos
+    ));
   }
 } 
